# meddle-icp-be

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
.github/workflows/: build-rust.yaml
src/meddle_backend/: Cargo.toml  meddle_backend.did
src/meddle_backend/src/: common.rs  database.rs  lib.rs
src/meddle_backend/src/api/: create.rs  read.rs
src/meddle_backend/src/common/: guards.rs  structures.rs  uuid.rs
src/meddle_frontend/: index.html  index.ts  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vite.plugins.ts
src/meddle_frontend/src/: App.jsx  App.tsx  app.html  index.scss  main.tsx
src/meddle_frontend/src/components/: LoginButton.tsx  Principal.tsx  SensorTable.svelte
src/meddle_frontend/src/ic/: Actors.tsx
src/meddle_frontend/src/lib/: auth.ts  canisters.ts  consts.ts  types.ts
src/meddle_frontend/src/routes/: +layout.svelte  +page.svelte
src/meddle_frontend/static/: .ic-assets.json5
