[package]
name = "meddle_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
rand = "0.7.3"

[dependencies.uuid]
version = "0.7"
