[package]
name = "meddle_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13.2"
ic-stable-structures = "0.6.4"
serde = "1.0.197"
serde_json = "=1.0.1"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
rand = "0.7.3"
itertools = "0.12.1"

[dependencies.uuid]
version = "0.7"
